<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.rebty.team2019.Fragments.RegistrationFragment">


        <EditText
            android:id="@+id/fragment_registration_editText_surName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/fragment_registration_editText_surName_hint" />

        <EditText
            android:id="@+id/fragment_registration_editText_firstName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_registration_editText_surName"
            android:layout_marginBottom="15dp"
            android:hint="@string/fragment_registration_editText_firstName_hint" />

        <EditText
            android:id="@+id/fragment_registration_editText_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_registration_editText_firstName"
            android:layout_marginBottom="15dp"
            android:hint="@string/editText_login_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fragment_registration_editText_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_registration_editText_email"
            android:layout_marginBottom="15dp"
            android:hint="@string/editText_password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/fragment_registration_editText_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/fragment_registration_editText_password"
            android:layout_marginBottom="15dp"
            android:hint="@string/fragment_registration_editText_phone_hint"
            android:inputType="phone" />

        <Button
            android:id="@+id/fragment_login_button_registration"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/fragment_registration_editText_phone"
            android:background="@drawable/button_pink_flat_selector"
            android:text="@string/button_registration_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>
</ScrollView>

