<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rebty.team2019.Fragments.LoginFragment">

    <EditText
        android:id="@+id/fragment_login_editText_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/editText_login_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fragment_login_editText_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/fragment_login_editText_email"
        android:layout_marginBottom="15dp"
        android:hint="@string/editText_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/fragment_login_button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fragment_login_editText_password"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_pink_flat_selector"
        android:text="@string/button_login_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fragment_login_button_forgetPassword"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_login_button_login"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/fragment_login_textView_forgetPassword_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

</RelativeLayout>
