<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rebty.team2019.Fragments.ForgetpasswordFragment">


    <TextView
        android:id="@+id/fragment_forgetpassword_textView_fillplace"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/fragment_forgetpassword_textView_fillplace_text"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/fragment_forgetpassword_editText_email"
        android:layout_width="match_parent"
        android:layout_marginBottom="15dp"
        android:layout_height="40dp"
        android:layout_below="@+id/fragment_forgetpassword_textView_fillplace"
        android:hint="@string/editText_login_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fragment_forgetpassword_editText_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/fragment_forgetpassword_editText_email"
        android:hint="@string/fragment_registration_editText_phone_hint"
        android:inputType="phone"/>


    <Button
        android:id="@+id/fragment_login_forgetpassword_button_restorepassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/fragment_forgetpassword_editText_phone"
        android:background="@drawable/button_pink_flat_selector"
        android:text="@string/fragment_forgetpassword_button_restorepassword_text"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</RelativeLayout>
